<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/roboto"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="0dp"
        android:paddingBottom="16dp"
        android:text="@string/orders_food_name_string"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:padding="16dp"
        android:text="@string/orders_food_amount_string"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/roboto"
        android:paddingStart="0dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:text="@string/orders_food_price_string"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black" />
</LinearLayout>