<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetailActivity">

    <Button
        android:id="@+id/btn_reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_medium"
        android:padding="0dp"
        android:text="@string/reject_string"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_self_pickup"
        app:layout_constraintStart_toStartOf="@+id/btn_order_detail_back"
        app:layout_constraintTop_toBottomOf="@+id/btn_order_detail_back" />

    <TextView
        android:id="@+id/tv_orderDetail_customer_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nil_string"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/textView49"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/address_title_string"
        android:textColor="#B6B6B6"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_customer_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_customer_phone" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/background_order_detail_orange_button"
        android:text="@string/orders_call_button_string"
        android:textColor="#FF4500"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_customer_phone"
        app:layout_constraintEnd_toEndOf="@+id/tv_order_id"
        app:layout_constraintTop_toTopOf="@+id/textView47" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/orders_phone_title_string"
        android:textColor="#B6B6B6"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tv_customer_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/orders_phone_string"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/textView47"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/tv_pickup_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_timestamp_string"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/tv_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_customer_name" />

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/orders_order_id"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pickup_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_customer_name" />

    <TextView
        android:id="@+id/tv_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/order_buyerName"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/orders_notes_title_string"
        android:textAlignment="textStart"
        android:textColor="#B6B6B6"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_call"
        app:layout_constraintStart_toStartOf="@+id/tv_orderDetail_customer_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_orderDetail_customer_address" />

    <TextView
        android:id="@+id/tv_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/orders_note_string"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView51"
        app:layout_constraintStart_toStartOf="@+id/textView51"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <View
        android:id="@+id/view7"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="#12000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_notes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <View
        android:id="@+id/view8"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#12000000"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_order_item" />

    <ImageButton
        android:id="@+id/btn_order_detail_back"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_left_chevron"
        app:layout_constraintBottom_toBottomOf="@+id/btn_reject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Rp 73.500"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_total_price_title" />

        <TextView
            android:id="@+id/tv_total_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Total"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_shipping_title"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/accept_string"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_total_price"
            app:layout_constraintStart_toStartOf="@+id/tv_total_price_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_price" />

        <TextView
            android:id="@+id/tv_shipping_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="Ongkos Kirim"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_shipping_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="Rp 10.000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_shipping_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view9"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:background="@drawable/shadow_gradient"
        app:layout_constraintBottom_toTopOf="@+id/cl_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_foodOrder"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

</androidx.constraintlayout.widget.ConstraintLayout>