<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rounded_edit_text"
        android:hint="@string/passsword_string"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/et_login_email"
        app:layout_constraintStart_toStartOf="@+id/et_login_email"
        app:layout_constraintTop_toBottomOf="@+id/et_login_email" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_rounded_edit_text"
        android:ems="10"
        android:hint="@string/email_string"
        android:inputType="textWebEmailAddress"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password_string"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_caps_string"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/button11"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/btn_signUpNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:text="@string/dont_have_an_account_string"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Gilroy"
            android:text="yumm."
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Gilroy"
            android:text="it"
            android:textColor="@color/colorSecondary"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>