<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orders_item_container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shadow"
        android:backgroundTint="#FFFFFF"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_food"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_self_pickup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total_item"
            app:layout_constraintBottom_toBottomOf="@+id/iv_food"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintVertical_bias="0.037" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/order_type"
            android:textColor="@color/colorTertiary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_discount"
            app:layout_constraintEnd_toEndOf="@+id/tv_menuList_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_menuList_price" />

        <TextView
            android:id="@+id/tv_menuList_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/order_total_price"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/order_buyerName"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/iv_food"
            app:layout_constraintTop_toTopOf="@+id/iv_food" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view10"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orders_item_container_view" />
</androidx.constraintlayout.widget.ConstraintLayout>